@@ -1,7 +1,7 @@
 package ignition.core.jobs
 
-import org.apache.spark.SparkContext
-import org.joda.time.DateTime
+import org.apache.spark.{SparkConf, SparkContext}
+import org.joda.time.{DateTimeZone, DateTime}
 
 object CoreJobRunner {
 
@@ -10,10 +10,11 @@ object CoreJobRunner {
 
 
   case class RunnerConfig(setupName: String = "nosetup",
-                          date: DateTime = DateTime.now,
+                          date: DateTime = DateTime.now.withZone(DateTimeZone.UTC),
                           tag: String = "notag",
                           user: String = "nouser",
                           master: String = "local[*]",
+                          executorMemory: String = "2G",
                           additionalArgs: Map[String, String] = Map.empty)
 
   def runJobSetup(args: Array[String], jobsSetups: Map[String, (RunnerContext) => Unit]) {
@@ -22,20 +23,24 @@ object CoreJobRunner {
       arg[String]("<setup-name>") required() action { (x, c) =>
         c.copy(setupName = x)
       } text(s"one of ${jobsSetups.keySet}")
-      opt[String]('d', "date") action { (x, c) =>
+      // Note: we use runner-option name because when passing args to spark-submit we need to avoid name conflicts
+      opt[String]('d', "runner-date") action { (x, c) =>
         c.copy(date = new DateTime(x))
       }
-      opt[String]('t', "tag") action { (x, c) =>
+      opt[String]('t', "runner-tag") action { (x, c) =>
         c.copy(tag = x)
       }
-      opt[String]('u', "user") action { (x, c) =>
+      opt[String]('u', "runner-user") action { (x, c) =>
         c.copy(user = x)
       }
-      opt[String]('m', "master") action { (x, c) =>
+      opt[String]('m', "runner-master") action { (x, c) =>
         c.copy(master = x)
       }
+      opt[String]('e', "runner-executor-memory") action { (x, c) =>
+        c.copy(executorMemory = x)
+      }
 
-      opt[(String, String)]('w', "with") unbounded() action { (x, c) =>
+      opt[(String, String)]('w', "runner-with-arg") unbounded() action { (x, c) =>
         c.copy(additionalArgs = c.additionalArgs ++ Map(x))
       }
     }
@@ -47,8 +52,22 @@ object CoreJobRunner {
         s"Invalid job setup ${config.setupName}, available jobs setups: ${jobsSetups.keySet}")
 
       val appName = s"${config.setupName}.${config.tag}"
-      val sc = new SparkContext(config.master, appName,
-        System.getenv("SPARK_HOME"), SparkContext.jarOfClass(this.getClass).toSeq)
+      val sparkConf = new SparkConf()
+      sparkConf.setMaster(config.master)
+      sparkConf.setAppName(appName)
+      sparkConf.setJars(SparkContext.jarOfClass(this.getClass).toSeq)
+      sparkConf.set("spark.executor.memory", config.executorMemory)
+      sparkConf.set("spark.logConf", "true")
+      sparkConf.set("spark.executor.extraJavaOptions", "-Djava.io.tmpdir=/mnt -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCTimeStamps -XX:-UseGCOverheadLimit")
+      sparkConf.set("spark.speculation", "true")
+      sparkConf.set("spark.akka.frameSize", "15")
+      sparkConf.set("spark.default.parallelism", "640")
+      sparkConf.set("spark.shuffle.memoryFraction", "0.3")
+      sparkConf.set("spark.storage.memoryFraction", "0.3")
+      sparkConf.set("spark.reducer.maxMbInFlight", "10")
+
+
+      val sc = new SparkContext(sparkConf)
 
       val context = RunnerContext(sc, config)
 
